--- a/index.html
+++ b/index.html
@@ -5,33 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Header-->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo link">Web <span class="logo-header">Studio</span></a>
 
-        <ul>
+        <ul class="list">
           <li>
-            <a href="">Studio</a>
+            <a href="./index.html" class="link title primary-acent">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html">Portfolio</a>
+            <a href="./portfolio.html" class="link title primary-acent">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a href="" class="link title primary-acent">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <section>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link contact primary-acent"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link contact primary-acent">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </section>
@@ -40,37 +49,37 @@
     <main>
       <!-- Hero -->
       <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="title hero">Effective Solutions for Your Business</h1>
+        <button type="button" class="button">Order Service</button>
       </section>
 
       <!-- Advantages of WebStudio -->
       <section>
         <h2>Advantages of WebStudio</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
+            <h3 class="title-container">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="title-container">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="title-container">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="title-container">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.
@@ -81,9 +90,9 @@
 
       <!-- Services -->
       <section>
-        <h2>What are we doing</h2>
+        <h2 class="title-main-container">What are we doing</h2>
 
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/photo-with-monitor.jpg" alt="Photo with monitor" width="360" />
           </li>
@@ -99,27 +108,27 @@
       </section>
 
       <!-- Team -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="section-team">
+        <h2 class="title-main-container">Our Team</h2>
+        <ul class="list">
           <li>
             <img src="./images/team-mark.jpg" alt="Smiling man with a beard" width="264" />
-            <h3>Mark Guerrero</h3>
+            <h3 class="title-container">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/team-tom.jpg" alt="A young man looks to the side" width="264" />
-            <h3>Tom Ford</h3>
+            <h3 class="title-container">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/team-camila.jpg" alt="Brunette in a pink sweater" width="264" />
-            <h3>Camila Garcia</h3>
+            <h3 class="title-container">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/team-dan.jpg" alt="Smiling young man" width="264" />
-            <h3>Daniel Wilson</h3>
+            <h3 class="title-container">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -127,9 +136,9 @@
     </main>
 
     <footer>
-      <section>
-        <a href="./index.html">WebStudio</a>
-        <p>
+      <section class="section-footer">
+        <a href="./index.html" class="logo link">Web <span class="logo-footer">Studio</span></a>
+        <p class="text-footer">
           Increase the flow of customers and sales for your business with digital marketing & growth
           solutions.
         </p>
