--- a/portfolio.html
+++ b/portfolio.html
@@ -5,156 +5,189 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Header-->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo link">Web <span class="logo-header">Studio</span></a>
 
-        <ul>
+        <ul class="list">
           <li>
-            <a href="">Studio</a>
+            <a href="./index.html" class="link title primary-acent">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a href="./portfolio.html" class="link title primary-acent">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a href="" class="link title primary-acent">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <section>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link contact primary-acent"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link contact primary-acent">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </section>
     </header>
 
+    <!-- Main -->
     <main>
       <section>
-        <h1>works WebStudio</h1>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+        <h1>Works WebStudio</h1>
+        <!-- list 1 -->
+        <ul class="list">
+          <li>
+            <button type="button" cursor:pointer class="button-portfolio acent-portfolio">
+              All
+            </button>
+          </li>
+          <li>
+            <button type="button" cursor:pointer class="button-portfolio acent-portfolio">
+              Web Site
+            </button>
+          </li>
+          <li>
+            <button type="button" cursor:pointer class="button-portfolio acent-portfolio">
+              App
+            </button>
+          </li>
+          <li>
+            <button type="button" cursor:pointer class="button-portfolio acent-portfolio">
+              Design
+            </button>
+          </li>
+          <li>
+            <button type="button" cursor:pointer class="button-portfolio acent-portfolio">
+              Marketing
+            </button>
+          </li>
         </ul>
 
-        <ul>
-          <li>
-            <a href="">
+        <!-- list 2 -->
+        <ul class="">
+          <li class="acent-portfolio list">
+            <a href="" class="link">
               <img
                 src="./images/banking-app.jpg"
                 alt="Photo banking App"
                 width="360"
                 height="300"
               />
-              <h2>Banking App Interface Concept</h2>
-              <p>App</p>
+              <h2 class="title-container acent-portfolio">Banking App Interface Concept</h2>
+              <p class="text-portfolio acent-portfolio">App</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="acent-portfolio list">
+            <a href="" class="link">
               <img
                 src="./images/cashless-payment.jpg"
                 alt="Phone with QR code"
                 width="360"
                 height="300"
               />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
+              <h2 class="title-container acent-portfolio">Cashless Payment</h2>
+              <p class="text-portfolio acent-portfolio">Marketing</p>
             </a>
+            acent-portfolio
           </li>
-          <li>
-            <a href="">
+          <li class="acent-portfolio list">
+            <a href="" class="link">
               <img
                 src="./images/meditaion-app.jpg"
                 alt="App on phone and laptop"
                 width="360"
                 height="300"
               />
-              <h2>Meditaion App</h2>
-              <p>App</p>
+              <h2 class="title-container acent-portfolio">Meditaion App</h2>
+              <p class="text-portfolio acent-portfolio">App</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="acent-portfolio list">
+            <a href="" class="link">
               <img
                 src="./images/taxi.jpg"
                 alt="The man behind the wheel of a black car"
                 width="360"
                 height="300"
               />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p>
+              <h2 class="title-container acent-portfolio">Taxi Service</h2>
+              <p class="text-portfolio acent-portfolio">Marketing</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="acent-portfolio list">
+            <a href="" class="link">
               <img
                 src="./images/screen-illustrations.jpg"
                 alt="Phone with picture-theme"
                 width="360"
                 height="300"
               />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p>
+              <h2 class="title-container acent-portfolio">Screen Illustrations</h2>
+              <p class="text-portfolio acent-portfolio">Design</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="acent-portfolio list">
+            <a href="" class="link">
               <img
                 src="./images/online-courses.jpg"
                 alt="Girl in orange pullover"
                 width="360"
                 height="300"
               />
-              <h2>Online Courses</h2>
-              <p>Marketing</p>
+              <h2 class="title-container acent-portfolio">Online Courses</h2>
+              <p class="text-portfolio acent-portfolio">Marketing</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="acent-portfolio list">
+            <a href="" class="link">
               <img
                 src="./images/instagram-stories-concept.jpg"
                 alt="Illustrations in one color theme"
                 width="360"
                 height="300"
               />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p>
+              <h2 class="title-container acent-portfolio">Instagram Stories Concept</h2>
+              <p class="text-portfolio acent-portfolio">Design</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="acent-portfolio list">
+            <a href="" class="link">
               <img
                 src="./images/organic-food.jpg"
                 alt="The girl carries vegetables and fruits"
                 width="360"
                 height="300"
               />
-              <h2>Organic Food</h2>
-              <p>Web Site</p>
+              <h2 class="title-container acent-portfolio">Organic Food</h2>
+              <p class="text-portfolio acent-portfolio">Web Site</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="acent-portfolio list">
+            <a href="" class="link">
               <img
                 src="./images/fresh-coffee.jpg"
                 alt="Barment makes coffee with foam"
                 width="360"
                 height="300"
               />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p>
+              <h2 class="title-container acent-portfolio">Fresh Coffee</h2>
+              <p class="text-portfolio acent-portfolio">Web Site</p>
             </a>
           </li>
         </ul>
@@ -162,9 +195,9 @@
     </main>
 
     <footer>
-      <section>
-        <a href="./index.html">WebStudio</a>
-        <p>
+      <section class="section-footer">
+        <a href="./index.html" class="logo link">Web <span class="logo-footer">Studio</span></a>
+        <p class="text-footer">
           Increase the flow of customers and sales for your business with digital marketing & growth
           solutions.
         </p>
