--- a/index.html
+++ b/index.html
@@ -32,18 +32,12 @@
         </ul>
       </nav>
 
-      <section>
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link contact primary-acent"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link contact primary-acent">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </section>
+      <address>
+        <a href="mailto:info@devstudio.com" class="link contact primary-acent"
+          >info@devstudio.com</a
+        >
+        <a href="tel:+110001111111" class="link contact primary-acent">+11 (000) 111-11-11</a>
+      </address>
     </header>
 
     <main>
