--- a/portfolio.html
+++ b/portfolio.html
@@ -53,35 +53,25 @@
         <!-- list 1 -->
         <ul class="list">
           <li>
-            <button type="button" cursor:pointer class="button-portfolio acent-portfolio">
-              All
-            </button>
+            <button type="button" class="button-portfolio acent-portfolio">All</button>
           </li>
           <li>
-            <button type="button" cursor:pointer class="button-portfolio acent-portfolio">
-              Web Site
-            </button>
+            <button type="button" class="button-portfolio acent-portfolio">Web Site</button>
           </li>
           <li>
-            <button type="button" cursor:pointer class="button-portfolio acent-portfolio">
-              App
-            </button>
+            <button type="button" class="button-portfolio acent-portfolio">App</button>
           </li>
           <li>
-            <button type="button" cursor:pointer class="button-portfolio acent-portfolio">
-              Design
-            </button>
+            <button type="button" class="button-portfolio acent-portfolio">Design</button>
           </li>
           <li>
-            <button type="button" cursor:pointer class="button-portfolio acent-portfolio">
-              Marketing
-            </button>
+            <button type="button" class="button-portfolio acent-portfolio">Marketing</button>
           </li>
         </ul>
 
         <!-- list 2 -->
         <ul class="">
-          <li class="acent-portfolio list">
+          <li class="primary-acent list">
             <a href="" class="link">
               <img
                 src="./images/banking-app.jpg"
@@ -89,11 +79,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title-container acent-portfolio">Banking App Interface Concept</h2>
-              <p class="text-portfolio acent-portfolio">App</p>
+              <h2 class="title-container primary-acent">Banking App Interface Concept</h2>
+              <p class="text-portfolio primary-acent">App</p>
             </a>
           </li>
-          <li class="acent-portfolio list">
+          <li class="primary-acent list">
             <a href="" class="link">
               <img
                 src="./images/cashless-payment.jpg"
@@ -101,11 +91,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title-container acent-portfolio">Cashless Payment</h2>
-              <p class="text-portfolio acent-portfolio">Marketing</p>
+              <h2 class="title-container primary-acent">Cashless Payment</h2>
+              <p class="text-portfolio primary-acent">Marketing</p>
             </a>
           </li>
-          <li class="acent-portfolio list">
+          <li class="primary-acent list">
             <a href="" class="link">
               <img
                 src="./images/meditaion-app.jpg"
@@ -113,11 +103,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title-container acent-portfolio">Meditaion App</h2>
-              <p class="text-portfolio acent-portfolio">App</p>
+              <h2 class="title-container primary-acent">Meditaion App</h2>
+              <p class="text-portfolio primary-acent">App</p>
             </a>
           </li>
-          <li class="acent-portfolio list">
+          <li class="primary-acent list">
             <a href="" class="link">
               <img
                 src="./images/taxi.jpg"
@@ -125,11 +115,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title-container acent-portfolio">Taxi Service</h2>
-              <p class="text-portfolio acent-portfolio">Marketing</p>
+              <h2 class="title-container primary-acent">Taxi Service</h2>
+              <p class="text-portfolio primary-acent">Marketing</p>
             </a>
           </li>
-          <li class="acent-portfolio list">
+          <li class="primary-acent list">
             <a href="" class="link">
               <img
                 src="./images/screen-illustrations.jpg"
@@ -137,11 +127,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title-container acent-portfolio">Screen Illustrations</h2>
-              <p class="text-portfolio acent-portfolio">Design</p>
+              <h2 class="title-container primary-acent">Screen Illustrations</h2>
+              <p class="text-portfolio primary-acent">Design</p>
             </a>
           </li>
-          <li class="acent-portfolio list">
+          <li class="primary-acent list">
             <a href="" class="link">
               <img
                 src="./images/online-courses.jpg"
@@ -149,11 +139,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title-container acent-portfolio">Online Courses</h2>
-              <p class="text-portfolio acent-portfolio">Marketing</p>
+              <h2 class="title-container primary-acent">Online Courses</h2>
+              <p class="text-portfolio primary-acent">Marketing</p>
             </a>
           </li>
-          <li class="acent-portfolio list">
+          <li class="primary-acent list">
             <a href="" class="link">
               <img
                 src="./images/instagram-stories-concept.jpg"
@@ -161,11 +151,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title-container acent-portfolio">Instagram Stories Concept</h2>
-              <p class="text-portfolio acent-portfolio">Design</p>
+              <h2 class="title-container primary-acent">Instagram Stories Concept</h2>
+              <p class="text-portfolio primary-acent">Design</p>
             </a>
           </li>
-          <li class="acent-portfolio list">
+          <li class="primary-acent list">
             <a href="" class="link">
               <img
                 src="./images/organic-food.jpg"
@@ -173,11 +163,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title-container acent-portfolio">Organic Food</h2>
-              <p class="text-portfolio acent-portfolio">Web Site</p>
+              <h2 class="title-container primary-acent">Organic Food</h2>
+              <p class="text-portfolio primary-acent">Web Site</p>
             </a>
           </li>
-          <li class="acent-portfolio list">
+          <li class="primary-acent list">
             <a href="" class="link">
               <img
                 src="./images/fresh-coffee.jpg"
@@ -185,8 +175,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title-container acent-portfolio">Fresh Coffee</h2>
-              <p class="text-portfolio acent-portfolio">Web Site</p>
+              <h2 class="title-container primary-acent">Fresh Coffee</h2>
+              <p class="text-portfolio primary-acent">Web Site</p>
             </a>
           </li>
         </ul>
